Login issue & opportunity alignment -*Manasa

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/miscellaneous.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/miscellaneous.less
@@ -985,7 +985,7 @@ label.btn.lang-btn.active {
 		vertical-align: top;
 		width: 50%;
 		border-right: 2px solid #fff;
-		margin-bottom: 42px;
+		margin-bottom: 70px;
 		word-break: break-word;
 		padding: 0 15px;
 	}
@@ -1004,6 +1004,12 @@ label.btn.lang-btn.active {
 		margin: 0;
 		line-height: 1.5;
 		padding: 0 20px;
+		min-height: 4rem;
+		-webkit-box-orient: vertical;
+		display: -webkit-box;
+		overflow: hidden !important;
+		text-overflow: ellipsis;
+		-webkit-line-clamp: 5;
 	}
 	.sectors-content p, .grid-section p {
 		color: #7B838C;
